--- a/1.47/buster-slim/Dockerfile
+++ b/1.47/buster-slim/Dockerfile
@@ -16,12 +16,10 @@ RUN set -eux; \
 
 FROM base AS builder
 
-ARG RUST_VERSION
-ENV RUST_VERSION=${RUST_VERSION:-1.47.0}
-ARG RUSTUP_VERSION
-ENV RUSTUP_VERSION=${RUSTUP_VERSION:-1.22.1}
-ARG RUSTUP_SHA256
-ENV RUSTUP_SHA256=${RUSTUP_SHA256:-49c96f3f74be82f4752b8bffcf81961dea5e6e94ce1ccba94435f12e871c3bdb}
+ENV RUST_VERSION=1.47.0
+ENV RUSTUP_VERSION=1.22.1
+# see https://static.rust-lang.org/rustup/archive/${RUSTUP_VERSION}/x86_64-unknown-linux-gnu/rustup-init.sha256
+ENV RUSTUP_SHA256=49c96f3f74be82f4752b8bffcf81961dea5e6e94ce1ccba94435f12e871c3bdb
 
 ENV CARGO_HOME /usr/local/cargo
 ENV RUSTUP_HOME /usr/local/rustup
